--- a/dayang-yunk-photoshot-raya.html
+++ b/dayang-yunk-photoshot-raya.html
@@ -134,7 +134,7 @@
 
     <script>
       const API_URL =
-        "https://script.google.com/macros/s/AKfycbyOsSSZe5sKOcSIQwd0JA9p6BIu8g3jqwaOENkbHNbvdH4KCL4k06dQn--DGEcDOOqW2g/exec"; // Replace with your actual API URL
+        "https://script.google.com/macros/s/AKfycbzw7_o0lVOyIBENGtCXegfXYWpO8eeT9Aw4ScC0PM1LZZX47s1z6HEREIFOogR2zNsd0Q/exec"; // Replace with your actual API URL
 
       // Convert "7March" to YYYY-MM-DD format
       function parseCustomDate(dateString) {
@@ -395,7 +395,8 @@
           let result = await response.json();
 
           if (result.status === "success") {
-            // console.log(result.data);
+            console.log("fetch");
+            console.log(result.data);
             return result.data.map((b) => ({
               id: b.id,
               date: parseCustomDate(b.date),
@@ -501,8 +502,8 @@
               "Nov",
               "Dec",
             ];
-            console.log("parts");
-            console.log(parts);
+            // console.log("parts");
+            // console.log(parts);
 
             let year = parseInt(parts[0]); // 2025
             let month = parseInt(parts[1]); // 03
