--- a/appoinment.html
+++ b/appoinment.html
@@ -374,6 +374,9 @@
               <a href="dayang-yunk-photoshot-raya.html" target="_blank"
                 ><div class="btn btn-secondary w-100 mt-3">Appointments</div></a
               >
+              <a href="cash-flow.html" target="_blank"
+                ><div class="btn btn-secondary w-100 mt-3">CashFlow</div></a
+              >
             </form>
           </div>
         </div>
@@ -382,7 +385,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+    <script src="config.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         document.querySelector("#payment").addEventListener("input", updateBalance);
@@ -646,8 +649,7 @@
         console.log(formData);
 
         try {
-          const response = await fetch(
-            "https://script.google.com/macros/s/AKfycbz07Oi4uot37a59ZYaf6ETzT8S3fr2lR_Zg-2LKrs_nX9itmj7r4vqNsyqjcHtecVZMCA/exec",
+          const response = await fetch(CONFIG.API_URL,
             {
               method: "POST",
               headers: {
