--- a/dayang-yunk-photoshot-raya.html
+++ b/dayang-yunk-photoshot-raya.html
@@ -131,7 +131,7 @@
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       </div>
     </div>
-
+    <script src="config.js"></script>
     <script>
       const API_URL =
         "https://script.google.com/macros/s/AKfycbz07Oi4uot37a59ZYaf6ETzT8S3fr2lR_Zg-2LKrs_nX9itmj7r4vqNsyqjcHtecVZMCA/exec"; // Replace with your actual API URL
@@ -272,7 +272,7 @@
         let newStatus = document.getElementById("statusSelect").value;
 
         console.log(bookingId);
-        let response = await fetch(API_URL, {
+        let response = await fetch(CONFIG.API_URL, {
           method: "POST",
           headers: {
             "Content-Type": "text/plain", // ✅ Fix CORS issue
