--- a/cash-flow.html
+++ b/cash-flow.html
@@ -35,10 +35,114 @@
           <!-- Data will be populated here dynamically -->
         </tbody>
       </table>
+      <!-- Bootstrap Modal -->
+      <div
+        class="modal fade"
+        id="bookingModal"
+        tabindex="-1"
+        aria-labelledby="modalTitle"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalTitle">Booking Details</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body" id="modalBody">
+              <!-- Booking details will be inserted here -->
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Bootstrap CSS -->
+      <link
+        href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css"
+        rel="stylesheet"
+      />
+      <!-- Bootstrap JS (requires Popper.js) -->
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.min.js"></script>
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     </div>
     <script src="config.js"></script>
     <script>
-      // const API_URL = "your-api-url-here"; // Replace with actual API URL
+      function showBookingDetails(booking) {
+        console.log("showBookingDetails");
+        console.log(booking);
+        let modalTitle = document.getElementById("modalTitle");
+        let modalBody = document.getElementById("modalBody");
+        let dateRaw = new Date(booking.date); // Convert string to Date object
+        const options = { day: "numeric", month: "long", year: "numeric" };
+        const formattedDate = dateRaw.toLocaleDateString("en-GB", options);
+
+        const packages = {
+          "Pakej A": "Keluarga Kecil Ku (RM90)",
+          "Pakej B": "Keluarga Besar Ku (RM120)",
+          "Pakej C": "Keluarga Bahagia Ku (RM220)",
+        };
+
+        const addOns = {
+          Makeup: "Makeup (RM100)",
+          "Frame A": "Frame 8x12 (RM50)",
+          "Frame B": "Frame 12x18 (RM150)",
+          "Frame C": "Frame 16x24 (RM250)",
+        };
+
+        const formatAddOns = (addOnsString) => {
+          if (!addOnsString) return "N/A"; // Handle empty add-ons
+
+          return addOnsString
+            .split(", ") // Split by comma and space
+            .map((addOn) => addOns[addOn] || addOn) // Map to full name with price (keep unknown ones)
+            .join(", "); // Join back into a readable string
+        };
+
+        modalTitle.textContent = "Booking Details";
+        modalBody.innerHTML = `
+    <p><strong>Date:</strong> ${formattedDate}</p>
+    <p><strong>Time:</strong> ${booking.time}</p>
+    <p><strong>Name:</strong> ${booking.name || "N/A"}</p>
+    <p><strong>Phone:</strong> ${booking.phone || "N/A"}</p>
+    <p><strong>No IC:</strong> ${booking.noIc || "N/A"}</p>
+    <p><strong>People:</strong> ${booking.people || "N/A"} people</p>
+    <p><strong>Package:</strong> ${packages[booking.package] || "N/A"}</p>
+    <p><strong>Add Ons:</strong> ${formatAddOns(booking.addOns)}</p>
+    <p><strong>Deposit:</strong> RM${booking.deposit || "0.00"}</p>
+    <p><strong>Discount:</strong> RM${booking.discount || "0.00"}</p>
+    <p><strong>Payment:</strong> RM${booking.payment || "0.00"}</p>
+    <p><strong>Balance:</strong> RM${booking.balance || "0.00"}</p>
+    <p><strong>Promoter:</strong> ${booking.promoter || "N/A"}</p>
+    <p><strong>Remarks:</strong> ${booking.remarks || "N/A"}</p>
+    <p><strong>Status:</strong> ${booking.status || "N/A"}</p>
+
+        
+  `;
+
+        let bookingModal = new bootstrap.Modal(
+          document.getElementById("bookingModal")
+        );
+        bookingModal.show();
+      }
+
+
 
       const packages = {
         "Pakej A": "Keluarga Kecil Ku (RM90)",
@@ -210,7 +314,11 @@
               let row = `
                             <tr>
                                 <td>${index + 1}</td>
-                                <td>${b.name}</td>
+                                <td><a href="#" onclick='showBookingDetails(${JSON.stringify(
+                                  b
+                                )})' style="color: blue; text-decoration: underline;">${
+                b.name
+              }</a></td>
                                 <td>${b.date}</td>
                                 <td>${b.time}</td>
                                 <td>${b.package}</td>
@@ -221,12 +329,8 @@
                                 <td>${b.discount}</td>
                                 <td>${b.promoter}</td>
                                 <td>${totalAmount}</td>
-                                <td>${
-                                  photoAmount
-                                }</td>
-                                <td>${
-                                  butikAmount
-                                }</td>
+                                <td>${photoAmount}</td>
+                                <td>${butikAmount}</td>
                             </tr>
                         `;
               tableBody.innerHTML += row;
