update pakej and masa

--- a/appoinment.html
+++ b/appoinment.html
@@ -277,8 +277,9 @@
                   <option value="" disabled selected>Select a Package</option>
                   <option value="Pakej A">Pakej A - Kecil Ku ( RM 90 )</option>
                   <option value="Pakej B">Pakej B - Besar Ku ( RM 120 )</option>
-                  <option value="Pakej C">
-                    Pakej C - Bahagia Ku ( RM 220 )
+                  <option value="Pakej C">Pakej C - Bahagia Ku ( RM 220 )
+                  <option value="Pakej D">Pakej D - Pakej Raya Pertama & Kedua ( RM 180 )
+                  <option value="Pakej E">Pakej E - Pakej Raya Pertama & Kedua ( RM 280 )
                   </option>
                 </select>
               </div>
@@ -408,8 +409,7 @@
         "06:30 PM",
         "07:00 PM",
         "07:30 PM",
-        "08:00 PM",
-        "08:30 PM"
+        "08:00 PM"
       ];
       const restWeekend = [
         "07:00 PM",
