--- a/dayang-yunk-photoshot-raya.html
+++ b/dayang-yunk-photoshot-raya.html
@@ -316,7 +316,9 @@
         const packages = {
             "Pakej A": "Keluarga Kecil Ku (RM90)",
             "Pakej B": "Keluarga Besar Ku (RM120)",
-            "Pakej C": "Keluarga Bahagia Ku (RM220)"
+            "Pakej C": "Keluarga Bahagia Ku (RM220)",
+            "Pakej D": "Pakej Raya Pertama & Kedua (RM 180)",
+            "Pakej E": "Pakej Raya Pertama & Kedua (RM 280)"
         };
 
         const addOns = {
