--- a/cash-flow.html
+++ b/cash-flow.html
@@ -25,7 +25,7 @@
             <th>Makeup</th>
             <th>Raya</th>
             <th>Diskaun (RM)</th>
-            <th>Promoter (RM)</th>
+            <th>Promoter</th>
             <th>Total Bayar (RM)</th>
             <th>Photo (RM)</th>
             <th>Butik (RM)</th>
@@ -269,7 +269,7 @@
 
               // Convert "23March" to Date
               const bookingDate = parseDate(b.date);
-              
+
               // Check if booking date is after March 31
               let rayaAmount =
                 bookingDate &&
