--- a/appoinment.html
+++ b/appoinment.html
@@ -543,6 +543,10 @@
             pricePackage = 120;
         } else if (package === 'Pakej C') {
             pricePackage = 220;
+        } else if (package === 'Pakej D') {
+            pricePackage = 180;
+        } else if (package === 'Pakej E') {
+            pricePackage = 280;
         }
 
         // Balance calculation
