--- a/cash-flow.html
+++ b/cash-flow.html
@@ -150,8 +150,8 @@
         "Pakej A": "Keluarga Kecil Ku (RM90)",
         "Pakej B": "Keluarga Besar Ku (RM120)",
         "Pakej C": "Keluarga Bahagia Ku (RM220)",
-        "Pakej D": "Pakej Raya Pertama & Kedua (RM 180)",
-        "Pakej E": "Pakej Raya Pertama & Kedua (RM 280)"
+        "Pakej D": "Pakej Raya Pertama & Kedua (RM180)",
+        "Pakej E": "Pakej Raya Pertama & Kedua (RM280)"
       };
 
       const addOns = {
@@ -163,8 +163,8 @@
 
       function extractPrice(text) {
         const match = text.match(/\(RM(\d+)\)/);
-        // console.log("text");
-        // console.log(text);
+        console.log("text");
+        console.log(text);
         return match ? parseInt(match[1]) : 0;
       }
 
