--- a/appoinment.html
+++ b/appoinment.html
@@ -371,7 +371,7 @@
               <a href="dayang-yunk-photoshot-raya.html" target="_blank"
                 ><div class="btn btn-secondary w-100 mt-3">Appointments</div></a
               >
-              <a href="cash-flow.html" target="_blank"
+              <a href="dybm-cash-flow.html" target="_blank"
                 ><div class="btn btn-secondary w-100 mt-3">CashFlow</div></a
               >
             </form>
