--- a/appoinment.html
+++ b/appoinment.html
@@ -8,6 +8,25 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <style>
+      .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(255, 255, 255, 0.8); /* Light overlay */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999; /* Ensure it's above all elements */
+      }
+
+      .spinner-grow {
+        width: 4rem;
+        height: 4rem;
+      }
+    </style>
   </head>
   <body class="bg-light">
     <div class="container">
@@ -15,6 +34,11 @@
         <div class="col-md-6 col-lg-4 mt-5">
           <div class="card shadow p-4">
             <h2 class="text-center mb-4">Photoshot Raya DayangYunk</h2>
+            <div id="loader" class="overlay" style="display: none;">
+              <div class="spinner-grow text-success" role="status">
+                  <span class="sr-only"></span>
+              </div>
+            </div>
             <form id="bookingForm">
               <div class="mb-3">
                 <label for="name" class="form-label">Name</label>
@@ -572,6 +596,9 @@
       async function submitAppointment(event) {
         event.preventDefault();
 
+        // Show loader
+        document.getElementById("loader").style.display = "flex";
+
         // Get raw values
         const name      = document.querySelector("#name").value;
         const phone     = document.querySelector("#phone").value;
@@ -683,6 +710,9 @@
         } catch (error) {
           console.error("Error:", error);
           alert("Failed to submit. Please try again.");
+        } finally {
+          // Hide loader after the operation is complete
+          document.getElementById("loader").style.display = "none";
         }
       }
 
