--- a/dayang-yunk-photoshot-raya.html
+++ b/dayang-yunk-photoshot-raya.html
@@ -65,6 +65,24 @@
         font-weight: bold;
         cursor: pointer;
       }
+
+      .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(255, 255, 255, 0.8); /* Light overlay */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999; /* Ensure it's above all elements */
+      }
+
+      .spinner-grow {
+        width: 4rem;
+        height: 4rem;
+      }
     </style>
   </head>
   <body>
@@ -72,6 +90,13 @@
       <div class="d-flex justify-content-evenly mb-3">
         <h2 class="text-center">Available Slots</h2>
       </div>
+
+      <div id="loader" class="overlay" style="display: none;">
+        <div class="spinner-grow text-success" role="status">
+            <span class="sr-only"></span>
+        </div>
+      </div>
+    
 
       <div class="table-responsive">
         <table class="table table-bordered text-center">
@@ -285,6 +310,9 @@
         let promoter = document.getElementById("promoterInput").value;
         let remarks = document.getElementById("remarksInput").value;
 
+        // Show loader
+        document.getElementById("loader").style.display = "flex";
+
         // ✅ Convert Date to "7March" format
         const dateObj = new Date(dateInput);
         const day = dateObj.getDate(); // Get day (7)
@@ -296,57 +324,73 @@
         let hourNum = parseInt(hours, 10);
         const period = hourNum >= 12 ? "PM" : "AM"; // Determine AM/PM
         hourNum = hourNum % 12 || 12; // Convert 24-hour to 12-hour format
-        const formattedTime = `${hourNum}${minutes}${period}`.replace(/\s/g, "");
+        const formattedTime = `${hourNum}${minutes}${period}`.replace(
+          /\s/g,
+          ""
+        );
 
         const addOns = getSelectedAddons()
           .map((addon) => `${addon.name}`)
           .join(", "); // Convert array to a comma-separated string
 
         console.log(bookingId);
-        let response = await fetch(CONFIG.API_URL, {
-          method: "POST",
-          headers: {
-            "Content-Type": "text/plain", // ✅ Fix CORS issue
-          },
-          body: JSON.stringify({
-            action: "update",
-            id: bookingId,
-            name: name,
-            phone: phone,
-            noIc: noIc,
-            date: formattedDate,
-            time: formattedTime,
-            status: newStatus,
-            people: people,
-            package: packageSelected,
-            addOns: addOns,
-            deposit: deposit,
-            discount: discount,
-            payment: payment,
-            balance: balance,
-            promoter: promoter,
-            remarks: remarks,
-            raya: raya,
-          }),
-        });
-
-        let result = await response.json();
-        if (result.status === "updated" && result.id) {
-          Swal.fire({
-            title: "Success!",
-            html: `<strong>Status updated successfully!</strong>`,
-            icon: "success",
-            confirmButtonText: "Okay",
-          }).then(() => {
-            location.reload();
+        try {
+          let response = await fetch(CONFIG.API_URL, {
+            method: "POST",
+            headers: {
+              "Content-Type": "text/plain", // ✅ Fix CORS issue
+            },
+            body: JSON.stringify({
+              action: "update",
+              id: bookingId,
+              name: name,
+              phone: phone,
+              noIc: noIc,
+              date: formattedDate,
+              time: formattedTime,
+              status: newStatus,
+              people: people,
+              package: packageSelected,
+              addOns: addOns,
+              deposit: deposit,
+              discount: discount,
+              payment: payment,
+              balance: balance,
+              promoter: promoter,
+              remarks: remarks,
+              raya: raya,
+            }),
           });
-        } else {
+
+          let result = await response.json();
+
+          if (result.status === "updated" && result.id) {
+            Swal.fire({
+              title: "Success!",
+              html: `<strong>Status updated successfully!</strong>`,
+              icon: "success",
+              confirmButtonText: "Okay",
+            }).then(() => {
+              location.reload();
+            });
+          } else {
+            Swal.fire({
+              title: "Error",
+              text: result.message || "Unknown error occurred.",
+              icon: "error",
+              confirmButtonText: "Okay",
+            });
+          }
+        } catch (error) {
           Swal.fire({
             title: "Error",
-            text: result.message || "Unknown error occurred.",
+            text: "Failed to update. Please try again.",
             icon: "error",
             confirmButtonText: "Okay",
           });
+        } finally {
+          // Hide loader after the operation is complete
+          document.getElementById("loader").style.display = "none";
         }
       }
 
@@ -367,11 +411,13 @@
       }
 
       function updateBalance() {
-        console.log("trigger update balance")
-        let payment = parseFloat(document.querySelector("#paymentInput").value) || 0;
+        console.log("trigger update balance");
+        let payment =
+          parseFloat(document.querySelector("#paymentInput").value) || 0;
         let discount =
           parseFloat(document.querySelector("#discountInput").value) || 0;
-        let deposit = parseFloat(document.querySelector("#depositInput").value) || 0;
+        let deposit =
+          parseFloat(document.querySelector("#depositInput").value) || 0;
         let raya = parseFloat(document.querySelector("#rayaInput").value) || 0;
         const package = document.querySelector("#packageInput").value;
         let pricePackage = 0;
@@ -408,18 +454,20 @@
       }
 
       document.addEventListener("input", function (event) {
-          if (
-              event.target.matches("#paymentInput, #discountInput, #depositInput, #rayaInput") ||
-              event.target.matches("input[name='addon[]']")
-          ) {
-              updateBalance();
-          }
+        if (
+          event.target.matches(
+            "#paymentInput, #discountInput, #depositInput, #rayaInput"
+          ) ||
+          event.target.matches("input[name='addon[]']")
+        ) {
+          updateBalance();
+        }
       });
 
       document.addEventListener("change", function (event) {
-          if (event.target.matches("#packageInput")) {
-              updateBalance();
-          }
+        if (event.target.matches("#packageInput")) {
+          updateBalance();
+        }
       });
 
       function showBookingDetails(booking) {
@@ -431,13 +479,13 @@
         const options = { day: "numeric", month: "long", year: "numeric" };
         const formattedDate = dateRaw.toLocaleDateString("en-GB", options);
 
-        console.log('formate date ' + formattedDate);
+        console.log("formate date " + formattedDate);
         // Convert time to 12-hour format with AM/PM
         let formattedTime = formatTimeTo12Hour(booking.time);
-        console.log('formate time ' + formattedTime);
+        console.log("formate time " + formattedTime);
 
         let formalDate = formatDate(formattedDate);
-        let formalTime= formatTime(formattedTime);
+        let formalTime = formatTime(formattedTime);
         const packages = {
           "Pakej A": "Keluarga Kecil Ku (RM90)",
           "Pakej B": "Keluarga Besar Ku (RM120)",
@@ -610,19 +658,19 @@
       }
 
       function formatDate(inputDate) {
-          const dateObj = new Date(inputDate);
-          const year = dateObj.getFullYear();
-          const month = String(dateObj.getMonth() + 1).padStart(2, "0"); // Ensure 2 digits
-          const day = String(dateObj.getDate()).padStart(2, "0");
-          return `${year}-${month}-${day}`;
+        const dateObj = new Date(inputDate);
+        const year = dateObj.getFullYear();
+        const month = String(dateObj.getMonth() + 1).padStart(2, "0"); // Ensure 2 digits
+        const day = String(dateObj.getDate()).padStart(2, "0");
+        return `${year}-${month}-${day}`;
       }
 
       // Example: "11:00 AM" -> "11:00" (24-hour format)
       function formatTime(inputTime) {
-          const timeObj = new Date(`2000-01-01 ${inputTime}`); // Temporary date
-          const hours = String(timeObj.getHours()).padStart(2, "0");
-          const minutes = String(timeObj.getMinutes()).padStart(2, "0");
-          return `${hours}:${minutes}`;
+        const timeObj = new Date(`2000-01-01 ${inputTime}`); // Temporary date
+        const hours = String(timeObj.getHours()).padStart(2, "0");
+        const minutes = String(timeObj.getMinutes()).padStart(2, "0");
+        return `${hours}:${minutes}`;
       }
 
       // Fetch bookings from API
