--- a/dayang-yunk-appointments.html
+++ b/dayang-yunk-appointments.html
@@ -65,12 +65,84 @@
         font-weight: bold;
         cursor: pointer;
       }
+
+      .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(255, 255, 255, 0.8); /* Light overlay */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999; /* Ensure it's above all elements */
+      }
+
+      .loader {
+        width: 48px;
+        height: 48px;
+        position: relative;
+      }
+      .loader::before , .loader::after{
+        content: '';
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50% , -50%);
+        width: 48em;
+        height: 48em;
+        background-image:
+          radial-gradient(circle 10px, purple 100%, transparent 0),
+          radial-gradient(circle 10px, purple 100%, transparent 0),
+          radial-gradient(circle 10px, purple 100%, transparent 0),
+          radial-gradient(circle 10px, purple 100%, transparent 0),
+          radial-gradient(circle 10px, purple 100%, transparent 0),
+          radial-gradient(circle 10px, purple 100%, transparent 0),
+          radial-gradient(circle 10px, purple 100%, transparent 0),
+          radial-gradient(circle 10px, purple 100%, transparent 0);
+        background-position: 0em -18em, 0em 18em, 18em 0em, -18em 0em,
+                            13em -13em, -13em -13em, 13em 13em, -13em 13em;
+          background-repeat: no-repeat;
+        font-size: 0.5px;
+        border-radius: 50%;
+        animation: blast 1s ease-in infinite;
+      }
+      .loader::after {
+        font-size: 1px;
+        background: purple;
+        animation: bounce 1s ease-in infinite;
+      }
+
+      @keyframes bounce {
+        0% , 100%{ font-size: 0.75px }
+        50% { font-size: 1.5px }
+      }
+      @keyframes blast {
+        0% , 40% {
+          font-size: 0.5px;
+        }
+        70% {
+          opacity: 1;
+          font-size: 4px;
+        }
+        100% {
+          font-size: 6px;
+          opacity: 0;
+        }
+      }
     </style>
   </head>
   <body>
     <div class="container mt-4">
       <div class="d-flex justify-content-evenly mb-3">
         <h2 class="text-center">Available Slots</h2>
+      </div>
+
+      <div id="loader" class="overlay" style="display: none;">
+        <div class="loader text-success" role="status">
+            <span class="sr-only"></span>
+        </div>
       </div>
 
       <div class="table-responsive">
@@ -368,6 +440,8 @@
 
       // Fetch bookings from API
       async function fetchBookings() {
+        // Show loader
+        document.getElementById("loader").style.display = "flex";
         try {
           let response = await fetch(CONFIG.API_URL);
           let result = await response.json();
@@ -399,6 +473,9 @@
         } catch (error) {
           console.error("Error fetching data:", error);
           return [];
+        } finally {
+          // Hide loader after the operation is complete
+          document.getElementById("loader").style.display = "none";
         }
       }
 
